<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackGround">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view:cardElevation="3dp"
                card_view:cardCornerRadius="4dp"
                card_view:contentPadding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleContacto"
                    android:textSize="@dimen/size_title_contacto_nuevo_cliente"
                    android:textStyle="bold" />

                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvClienteDetNombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"/>

                        <TextView
                            android:text="@string/hintNombre"
                            android:textColor="#9e9e9e"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvClienteDetApellido"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textSize="15sp"/>

                        <TextView
                            android:text="@string/hintApellido"
                            android:textColor="#9e9e9e"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvClienteDetCorreo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textSize="15sp"/>

                        <TextView
                            android:text="@string/hintCorreo"
                            android:textColor="#9e9e9e"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="right">

                    <android.support.design.widget.FloatingActionButton
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/fabItemCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_local_phone_white_36dp"
                        app:backgroundTint="@color/colorRed"
                        app:elevation="6dp"
                        app:pressedTranslationZ="12dp"
                        app:rippleColor="@color/colorRedRiple" />


                    <TextView
                        android:id="@+id/tvClienteDetTelefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginRight="12dp"
                        android:layout_gravity="right"/>

                    <TextView
                        android:text="@string/hintTelefono"
                        android:textColor="#9e9e9e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginRight="12dp"
                        android:layout_gravity="right"/>

                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view:cardElevation="3dp"
                card_view:cardCornerRadius="4dp"
                card_view:contentPadding="20dp">

                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvClienteDetDireccion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"/>

                        <TextView
                            android:text="@string/hintDireccion"
                            android:textColor="#9e9e9e"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvClienteDetDistrito"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textSize="15sp"/>

                        <TextView
                            android:text="@string/hintDistrito"
                            android:textColor="#9e9e9e"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvClienteDetReferencia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textSize="15sp"/>

                        <TextView
                            android:text="@string/hintReferencia"
                            android:textColor="#9e9e9e"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <android.support.design.widget.FloatingActionButton
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/fabItemMap"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_near_me_white_36dp"
                            app:backgroundTint="@color/colorRed"
                            app:elevation="6dp"
                            app:pressedTranslationZ="12dp"
                            app:rippleColor="@color/colorRedRiple" />


                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>




        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnCliDetNuevoPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNuevoPedido"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorBlank"
        android:layout_gravity="bottom"
        android:textStyle="bold"
        android:layout_margin="2dp"/>

</LinearLayout>